// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemDescriptor component tests snapshot testing for business key available 1`] = `
<Fragment>
  <Tooltip
    appendTo={[Function]}
    content="a1e139d5-4e77-48c9-84ae-34578e904e5a"
    data-ouia-component-type="item-descriptor"
    data-ouia-safe={true}
  >
    <span>
      HotelBooking
       
      <Badge>
        T1234HotelBooking01
      </Badge>
    </span>
  </Tooltip>
  <div
    id="kogito-consoles-tooltip-a1e139d5-4e77-48c9-84ae-34578e904e5a-0.5"
  />
</Fragment>
`;

exports[`ItemDescriptor component tests snapshot testing for business key null 1`] = `
<Fragment>
  <Tooltip
    appendTo={[Function]}
    content="a1e139d5-4e77-48c9-84ae-34578e904e5a"
    data-ouia-component-type="item-descriptor"
    data-ouia-safe={true}
  >
    <span>
      HotelBooking
       
      <TextContent
        className="pf-u-display-inline"
      >
        <Text
          className="pf-u-display-inline"
          component="small"
        >
          a1e13
        </Text>
      </TextContent>
    </span>
  </Tooltip>
  <div
    id="kogito-consoles-tooltip-a1e139d5-4e77-48c9-84ae-34578e904e5a-0.5"
  />
</Fragment>
`;
